--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": ".eslintrc.js",
   "dependencies": {
+    "canvas-txt": "^3.0.0",
     "pubsub-js": "^1.9.3",
     "three": "^0.129.0",
     "troika-three-text": "^0.42.0"
