--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "canvas-txt": "^3.0.0",
     "pubsub-js": "^1.9.3",
-    "three": "^0.129.0",
+    "three": "^0.132.2",
     "troika-three-text": "^0.42.0"
   },
   "scripts": {
@@ -24,10 +24,10 @@
   },
   "homepage": "https://github.com/franck34/ixr#readme",
   "devDependencies": {
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "copy-webpack-plugin": "^9.0.0",
-    "webpack": "^5.37.1",
-    "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2"
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^9.0.1",
+    "webpack": "^5.52.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.1.1"
   }
 }
