--- a/package.json
+++ b/package.json
@@ -9,11 +9,34 @@
     "pubsub-js": "^1.9.3",
     "three": "^0.132.2",
     "troika-three-text": "^0.42.0",
-    "ulog": "^2.0.0-beta.19"
+    "ulog": "^2.0.0-beta.19",
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^5.2.6",
+    "file-loader": "^6.2.0",
+    "glsl-blend": "^1.0.3",
+    "glslify-loader": "^2.0.0",
+    "gsap": "^3.7.1",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.1.0",
+    "normalize-wheel": "^1.0.1",
+    "portfinder-sync": "0.0.2",
+    "raw-loader": "^4.0.2",
+    "stats.js": "^0.17.0",
+    "style-loader": "^3.0.0",
+    "tweakpane": "^3.0.5",
+    "webpack": "^5.42.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.8.0"
   },
   "scripts": {
-    "dev": "webpack serve --config webpack.dev.js --progress",
-    "build": "webpack --config webpack.prod.js --progress"
+    "dev": " node node_modules/webpack/bin/webpack.js serve --config ./bundler/webpack.dev.js --progress",
+    "build": "node node_modules/webpack/bin/webpack.js --config ./bundler/webpack.prod.js --progress"
   },
   "repository": {
     "type": "git",
@@ -24,12 +47,5 @@
   "bugs": {
     "url": "https://github.com/franck34/ixr/issues"
   },
-  "homepage": "https://github.com/franck34/ixr#readme",
-  "devDependencies": {
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^9.0.1",
-    "webpack": "^5.52.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.1.1"
-  }
+  "homepage": "https://github.com/franck34/ixr#readme"
 }
